cabal-version: 3.0
name:          terminal-share
version:       0.1.0.0
synopsis:      A terminal sharing program like tmate.io
description:   A command-line application in Haskell to share terminal sessions.
homepage:      https://github.com/yourusername/terminal-share
bug-reports:   https://github.com/yourusername/terminal-share/issues
license:       MIT
license-file:  LICENSE
author:        Your Name
maintainer:    your.email@example.com
copyright:     2023 Your Name
category:      System
build-type:    Simple
extra-source-files:  README.md

executable terminal-share-server
  main-is:             Main.hs

  build-depends:
    base ^>= 4.17,
    network,
    bytestring
    -- Add other dependencies here later
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable terminal-share-client
  main-is:             Client.hs
  build-depends:
    base ^>= 4.17,
    network,
    bytestring,
    unix,
    process,
    async,
    posix-pty
    -- Add other dependencies here later
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

executable terminal-share-viewer
  main-is:             Viewer.hs
  build-depends:
    base ^>= 4.17,
    network,
    bytestring
    -- Add other dependencies here later
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010